RESOLVED FIXED113406
[Mac] Text track menu items sometimes labeled incorrectly
https://bugs.webkit.org/show_bug.cgi?id=113406
Summary [Mac] Text track menu items sometimes labeled incorrectly
Eric Carlson
Reported 2013-03-27 07:11:56 PDT
Text track menu items with both 'label' and 'srclang' attributes are not correct.
Attachments
Proposed patch (5.22 KB, patch)
2013-03-27 07:15 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-03-27 07:15:37 PDT
Created attachment 195311 [details] Proposed patch
Radar WebKit Bug Importer
Comment 2 2013-03-27 07:15:58 PDT
Jer Noble
Comment 3 2013-03-27 09:48:22 PDT
Comment on attachment 195311 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=195311&action=review r+, with nit: > Source/WebCore/page/CaptionUserPreferencesMac.mm:541 > + if (language.isEmpty() || label.contains(language)) { > + displayName.append(label); > + } else { Unnecessary braces.
Eric Carlson
Comment 4 2013-03-27 11:32:03 PDT
Note You need to log in before you can comment on or make changes to this bug.