[Mac] Text track menu items sometimes labeled incorrectly https://bugs.webkit.org/show_bug.cgi?id=113406

Reviewed by Jer Noble.

Source/WebCore:

media/video-controls-captions-trackmenu-localized.html was updated to test this.

* page/CaptionUserPreferencesMac.mm:
(WebCore::trackDisplayName): Use the 'label' attribute for the menu text when necessary.

LayoutTests:

* media/video-controls-captions-trackmenu-localized.html:
* platform/mac/media/video-controls-captions-trackmenu-localized-expected.txt:


Canonical link: https://commits.webkit.org/131742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147000 268f45cc-cd09-0410-ab3c-d52691b4dbfc